--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@100;400;700;800&family=Syne:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
     <title>Animation 3D</title>
